crates/oxc_css/tests/error/scss/value/function-call/unterminated.snap
---
source: crates/oxc_css/tests/error.rs
---
error: expect token `)`, but found `<eof>`
  ┌─ unterminated.scss:4:1
  │
4 │ 
  │ ^


